# PeR_leg

./: .gitignore  CMakeLists.txt  README.md  arf.dot  arf_with_regs.dot  df_simul_tests.py  df_simul_tests_hw.py  df_simul_tests_sw.py  dfg.v  gen_statis_baseline_michael.py  generate_dag_graphs.py  generate_graphs.py  generate_graphs_min_cost_1.py  generate_info_graphlets.py  generate_inverted_graphs.py  generate_pruned_graphs.py  generate_statistics.py  generate_statistics_iters.py  generate_stats_article.py  generate_tree_graphs.py  requirements.txt  run_methods.py  sa_fsm_tests.py  sa_pipline_tests.py  setup.py  setup_c.py  synth.v  temp_file.dot  test.py  tests.py  transform_results_sw.py  transform_results_sw_in_dot_files.py  vpr_scritp.py  yoltpipline_tests.py  yoto_pipline_hw_tests.py  yoto_pipline_sw_tests.py  yoto_pipline_tests.py  yott_mc0_pipeline_test.py  yott_mc1_pipeline_test.py  yott_pipeline_tests.py  (+3 more)
bench_mesh/: Opt_V25_E24.dot  ewf.dot  idctcol.dot  invert_matrix.dot  k4n4op.dot
bench_one_hop/: Fir16.dot
benchmarks/: Cplx8.dot  FilterRGB.dot  No_V14_E16.dot  No_V18_E18.dot  No_V20_E20.dot  No_V22_E25.dot  No_V30_E33.dot  No_V33_E33.dot  No_V42_E42.dot  No_V43_E50.dot  Opt_V15_E14.dot  Opt_V15_E17.dot  Opt_V24_E28.dot  Opt_V34_E38.dot  Opt_V40_E39.dot  Opt_V50_E49.dot  Opt_V59_E68.dot  arf.dot  conv3.dot  cosine2.dot  fir1.dot  fir2.dot  h2v2_smooth.dot  horner_bs.dot  jpeg_fdct_islow.dot  jpeg_idct_ifast.dot  mac.dot  matmul.dot  mults1.dot  simple.dot
dot_db/: teste_yott.dot
ignore/: run_methods.py
old/: tests.py  (+2 more)
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/cgra/sw/sa_pipeline/: pipeline_sa_sw.cpp  stage2_sa_sw.cpp  stage3_sa_sw.hpp  stage4_sa_sw.hpp  stage5_sa_sw.cpp  stage5_sa_sw.hpp  stage9_sa_sw.cpp  stage9_sa_sw.hpp
src/cpp/cmake/: boost.cmake
src/cpp/include/: graph.h  util.h
src/cpp/src/: graph.cpp  graph.h  util.cpp
src/cpp/sw/sa_pipeline/: defines_sa_sw.hpp  defs_sa.h  fifo_sa.cpp  fifo_sa.h  fifo_sa_sw.cpp  fifo_sa_sw.hpp  main.cpp  pipeline_sa_sw.hpp  sa_defs.h  sa_pipeline_sw.cpp  sa_pipeline_sw.h  stage0_sa.cpp  stage0_sa.h  stage0_sa_sw.cpp  stage0_sa_sw.hpp  stage1_sa.cpp  stage1_sa.h  stage1_sa_sw.hpp  stage2_sa.cpp  stage2_sa_sw.hpp  stage3_sa.cpp  stage3_sa_sw.cpp  stage4_sa.cpp  stage4_sa_sw.cpp  stage5_sa.cpp  stage6_sa.cpp  stage6_sa_sw.hpp  stage7_sa.cpp  stage7_sa_sw.cpp  stage8_sa.cpp  stage8_sa_sw.hpp  stage9_sa.cpp  util.cpp  util_sa_sw.cpp  util_sa_sw.hpp
src/cpp/util/: pipeline_base.cpp
src/old/cpp/cgra/sw/: CMakeLists.txt
src/old/cpp/cgra/sw/sa_pipeline/: stage1_sa_sw.cpp  stage6_sa_sw.cpp  stage7_sa_sw.hpp  stage8_sa_sw.cpp  types_sa_sw.hpp
(+44467 files in other folders)
